example/lib/src/arbs/errors/app_pl.arb
{
  "@@locale": "pl",
  "@@author": "example@gmail.com",
  "@@last_modified": "2026-07-14T13:18:25.440497Z",
  "@@comment": "Generated from Google Sheets",
  "error": "Wystąpił błąd",
  "@error": {
    "description": "Ошибка"
  },
  "unexpectedError": "Wystąpił nieoczekiwany błąd",
  "@unexpectedError": {
    "description": "Произошла какая то ошибка"
  },
  "bugReportSentText": "Zgłoszenie błędu zostało pomyślnie wysłane",
  "@bugReportSentText": {
    "description": "Сообщение об успешной отправке баг репорта"
  }
}